force-app/main/default/objects/SVMXC__Proforma_Invoice_Line__c/SVMXC__Proforma_Invoice_Line__c.object-meta.xml
<CustomObject>
    <description>Service contract/work order line billing details</description>
    <label>Proforma Invoice Line</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proforma Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>