force-app/main/default/objects/SVMXC__Proforma_Invoice_Line__c/fields/SVMXC__Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Expense_Type__c</fullName>
    <description>List of Expenses commonly incurred.</description>
    <inlineHelpText>List of Expenses commonly incurred.</inlineHelpText>
    <label>Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airfare</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Food - Breakfast</fullName>
            </value>
            <value>
                <fullName>Food - Dinner</fullName>
            </value>
            <value>
                <fullName>Food - Lunch</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Lodging</fullName>
            </value>
            <value>
                <fullName>Mileage</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Parts</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Rental Car</fullName>
            </value>
            <value>
                <fullName>Tolls</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>