force-app/main/default/objects/SVMXC__Proforma_Invoice_Line__c/fields/SVMXC__Line_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Line_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parts</fullName>
            </value>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Expenses</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Covered Product</fullName>
            </value>
            <value>
                <fullName>Covered Location</fullName>
            </value>
            <value>
                <fullName>Included Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>