force-app/main/default/objects/SVMXC__Proforma_Invoice_Line__c/fields/SVMXC__Product__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Part used in this Work order. This is a lookup to an existing product record.</description>
    <inlineHelpText>Part used in this Work order. This is a lookup to an existing product record.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Proforma Invoice Lines</relationshipLabel>
    <relationshipName>Proforma_Invoice_Line</relationshipName>
    <type>Lookup</type>
</CustomField>