force-app/main/default/objects/SVMXC__Proforma_Invoice_Line__c/fields/SVMXC__Service_Contract__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Service_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Contract</label>
    <referenceTo>SVMXC__Service_Contract__c</referenceTo>
    <relationshipLabel>Proforma Invoice Lines</relationshipLabel>
    <relationshipName>Proforma_Invoice_Line</relationshipName>
    <type>Lookup</type>
</CustomField>